<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/view_gray_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="5.0dip">

        <include
            layout="@layout/line_gray"
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/tv_share" />

        <TextView
            android:id="@id/tv_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10.0dip"
            android:text="@string/tv_share"
            android:textColor="@color/gray_fzxx" />

        <include
            layout="@layout/line_gray"
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@id/tv_share" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/share_wx_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:layout_weight="1.0"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/share_moment" />

            <TextView
                style="@style/share_popwindos"
                android:text="@string/tv_share_wxpyq" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_wx_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:layout_weight="1.0"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/share_wechat" />

            <TextView
                style="@style/share_popwindos"
                android:text="@string/tv_share_wxhy" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_sina"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:layout_weight="1.0"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/share_weibo" />

            <TextView
                style="@style/share_popwindos"
                android:text="@string/tv_share_sina" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_llq"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:layout_weight="1.0"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/share_safari" />

            <TextView
                style="@style/share_popwindos"
                android:text="@string/tv_share_ie" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_mail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:layout_weight="1.0"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/share_mail" />

            <TextView
                style="@style/share_popwindos"
                android:text="@string/tv_share_mail" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="@color/g_line" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10.0dip"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layout_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/share_refresh" />

            <TextView
                style="@style/share_popwindos"
                android:text="@string/tv_share_refresh" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/share_copy" />

            <TextView
                style="@style/share_popwindos"
                android:text="@string/tv_share_copy" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5.0dip"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/share_report" />

            <TextView
                style="@style/share_popwindos"
                android:text="@string/tv_share_report" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/line_gray" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12.0dip"
        android:gravity="center"
        android:text="@string/tv_cancel"
        android:textColor="@color/g_main" />
</LinearLayout>